<resources>
    <string name="app_name">Exercise2_18520494</string>
    <string name="Hello">Hello</string>
    <string name="chia">/</string>
    <string name="Delete">Delete</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="cham">.</string>
    <string name="_0">0</string>
    <string name="bang">=</string>
    <string name="plus">+</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="Sub">-</string>
    <string name="_5">5</string>
    <string name="x">x</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
</resources>